--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Setup Fonts
         run: |
           mkdir -p ~/.fonts
+          cp ./fonts/* ~/.fonts/
           cp ./otfs/*.otf ~/.fonts/
 
       - name: Setup Snap core
@@ -49,14 +50,6 @@ jobs:
               fonts-wqy-zenhei \
               libfontconfig1
           sudo fc-cache -fv
-
-      - name: Cache fonts
-        uses: actions/cache@v3
-        with:
-          path: |
-            /usr/share/fonts
-            /etc/fonts
-          key: ${{ runner.os }}-fonts-${{ hashFiles('resume.typ') }}
 
       - name: Generate build version
         id: version
